--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "boilerplate-fcc-challenge-d3",
+  "name": "visualize-data-with-a-bar-chart",
   "homepage": "https://marcomaz.github.io/FCC-Data-Visualization-Projects---Visualize-Data-with-a-Bar-Chart/",
   "version": "1.0.0",
-  "description": "Boilerplate for FCC's challenges with d3",
+  "description": "Visualize data with a bar chart",
   "main": "index.js",
   "author": "Marco Mazzai",
   "license": "MIT",
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "d3": "^6.3.1",
+    "d3-axis": "^2.0.0",
     "gh-pages": "^3.1.0"
   }
 }
